--- a/datenschutz.html
+++ b/datenschutz.html
@@ -174,7 +174,7 @@
     <section>
       <h2>Verantwortliche</h2>
       <p><strong>Stefanie Weiss</strong><br>
-      Wndlberg 116<br>
+      Wendlberg 11<br>
       A-5165 Berndorf<br>
       Österreich<br>
       Tel.: <a href="tel:+436602766507">+43 660 2766507</a><br>
@@ -209,3 +209,4 @@
   </main>
 </body>
 </html>
+
